Ajustes para el cambio de JRE a la 8